# space-review

./: .gitignore  AGENTS.md  README.md  openapi-endpoints.txt  openapi-schema-names.txt  openapi.json  openapi.min.json  pyproject.toml
scripts/: build-executable.sh  install.sh
skill/: SKILL.md
skill/references/: options.md
src/space_review/: __init__.py  api.py  cli.py  formatter.py  parser.py  processor.py
tests/: conftest.py  test_api.py  test_cli.py  test_formatter.py  test_parser.py  test_processor.py
